[gd_scene load_steps=9 format=3 uid="uid://dkdc3lgikvhio"]

[ext_resource type="PackedScene" uid="uid://bd7y8koo1w71" path="res://scenes/interfaces/interface_base.tscn" id="1_mn2md"]
[ext_resource type="Script" path="res://scenes/interfaces/battlesetup/battle_setup.gd" id="2_ng1v2"]
[ext_resource type="Texture2D" uid="uid://0jmm3api8fgm" path="res://assets/art/ui/arena.png" id="3_gu1wc"]
[ext_resource type="PackedScene" uid="uid://lt08ltq12ss6" path="res://scenes/slots/hero_slot/hero_portrait_slot.tscn" id="3_uuksq"]
[ext_resource type="Texture2D" uid="uid://c1c26xn47bydm" path="res://assets/art/characters/team_heroes_portraits/egon_circle_portrait.png" id="4_a5huj"]
[ext_resource type="Texture2D" uid="uid://bov1hs5fvyh28" path="res://assets/art/characters/team_heroes_portraits/eddy_circle_portrait.png" id="4_ymgtx"]
[ext_resource type="Texture2D" uid="uid://d2x2gfqjxapts" path="res://assets/art/characters/team_heroes_portraits/em_circle_portrait.png" id="5_duoty"]
[ext_resource type="Script" path="res://scenes/interfaces/battlesetup/hero_menu.gd" id="7_j87wi"]

[node name="BattleSetup" groups=["game_events"] instance=ExtResource("1_mn2md")]
script = ExtResource("2_ng1v2")
slot_scene = ExtResource("3_uuksq")

[node name="Label" parent="PC/MC/VB" index="0"]
text = "Battle Setup
"

[node name="HB" type="HBoxContainer" parent="PC/MC/VB" index="1"]
layout_mode = 2

[node name="VB" type="VBoxContainer" parent="PC/MC/VB/HB" index="0"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4

[node name="Top" type="HBoxContainer" parent="PC/MC/VB/HB/VB" index="0"]
layout_mode = 2

[node name="TopLabel" type="Label" parent="PC/MC/VB/HB/VB/Top" index="0"]
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"HeaderMedium"
text = "Top lane:"

[node name="TopButton" type="Button" parent="PC/MC/VB/HB/VB/Top" index="1"]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 150)
layout_mode = 2
size_flags_horizontal = 10
icon = ExtResource("4_a5huj")
flat = true
expand_icon = true

[node name="Spacer2" type="Control" parent="PC/MC/VB/HB/VB/Top" index="2"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="Bot" type="HBoxContainer" parent="PC/MC/VB/HB/VB" index="1"]
layout_mode = 2

[node name="BotLabel" type="Label" parent="PC/MC/VB/HB/VB/Bot" index="0"]
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"HeaderMedium"
text = "Bot lane:"

[node name="BotButton" type="Button" parent="PC/MC/VB/HB/VB/Bot" index="1"]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 150)
layout_mode = 2
size_flags_horizontal = 10
icon = ExtResource("5_duoty")
flat = true
expand_icon = true

[node name="Spacer2" type="Control" parent="PC/MC/VB/HB/VB/Bot" index="2"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="Jungle" type="HBoxContainer" parent="PC/MC/VB/HB/VB" index="2"]
visible = false
layout_mode = 2

[node name="JungleLabel" type="Label" parent="PC/MC/VB/HB/VB/Jungle" index="0"]
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"HeaderMedium"
text = "Jungle:"

[node name="JungleButton" type="Button" parent="PC/MC/VB/HB/VB/Jungle" index="1"]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 150)
layout_mode = 2
size_flags_horizontal = 10
icon = ExtResource("4_ymgtx")
flat = true
expand_icon = true

[node name="Spacer3" type="Control" parent="PC/MC/VB/HB/VB/Jungle" index="2"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="TextureRect" type="TextureRect" parent="PC/MC/VB/HB" index="1"]
custom_minimum_size = Vector2(600, 0)
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 4
texture = ExtResource("3_gu1wc")
expand_mode = 4
stretch_mode = 4

[node name="HeroMenu" type="PanelContainer" parent="." index="1"]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -50.0
offset_right = 50.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
theme_type_variation = &"PanelWithBorder"
script = ExtResource("7_j87wi")

[node name="MC" type="MarginContainer" parent="HeroMenu" index="0"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="VB" type="VBoxContainer" parent="HeroMenu/MC" index="0"]
layout_mode = 2

[node name="ExitButton" type="Button" parent="HeroMenu/MC/VB" index="0"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
text = "X"
flat = true

[node name="GridContainer" type="GridContainer" parent="HeroMenu/MC/VB" index="1"]
unique_name_in_owner = true
layout_mode = 2
columns = 4

[connection signal="pressed" from="PC/MC/VB/HB/VB/Top/TopButton" to="." method="_on_top_button_pressed"]
[connection signal="pressed" from="PC/MC/VB/HB/VB/Bot/BotButton" to="." method="_on_bot_button_pressed"]
[connection signal="pressed" from="PC/MC/VB/HB/VB/Jungle/JungleButton" to="." method="_on_jungle_button_pressed"]
[connection signal="pressed" from="HeroMenu/MC/VB/ExitButton" to="." method="_on_exit_button_pressed"]
